style.css
:root {
  --dark-bg: hsl(225, var(--s), var(--l) );
  --light-bg: hsl(225, var(--s), var(--ll) );
  --red: hsl(0, 50%, 50%);
  --shadow: hsla(225, 35%, var(--l3), var(--a) );
}
:root {
  --s: 50%;
  --l: 90%;
  --ll: 95%;
  --l3: 60%;
  --a: 0.3;
  --color: black;
}
html[data-theme="dark"] {
  --s: 25%;
  --l: 10%;
  --ll: 15%;
  --l3: 35%;
  --a: 0.5;
  --color: white;
}
html[data-theme="dark"] .icon {
  //filter: invert();
}
html {
  overflow: hidden auto;
  background-color: var(--dark-bg);
}
@media screen and (orientation: landscape) and (min-width: 700px) and (max-width: 839px) {
  html {font-size: 5px;}
}
@media screen and (orientation: landscape) and (min-width: 840px) and (max-width: 989px) {
  html {font-size: 6px;}
}
@media screen and (orientation: landscape) and (min-width: 990px) and (max-width: 1129px) {
  html {font-size: 7px;}
}
@media screen and (orientation: landscape) and (min-width: 1130px) and (max-width: 1269px) {
  html {font-size: 8px;}
}
@media screen and (orientation: landscape) and (min-width: 1270px) and (max-width: 1409px) {
  html {font-size: 9px;}
}
@media screen and (orientation: landscape) and (min-width: 1410px) {
  html {font-size: 10px;}
}
body {
  max-width: 100vw; min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
}
body, button, input, a {
  color: var(--color);
  font-family: 'Montserrat', sans-serif;
}
body, h1, h2, h3, h4, h5, button, label, input, p, ul, li, a {margin: 0;}

h1 {
  font-size: 2.6em;
  font-weight: 800;
  padding: 0 0 1rem 0;
}
h2 {
  font-size: 2.5em;
  font-weight: 800;
  padding: 0 2rem 1rem 1rem;
}
h3 {
  font-size: 1.8em;
  font-weight: 700;
}
p {
  font-size: 1.4em;
  font-weight: 600;
  line-height: 1.7;
}
button, label, input {
  font-size: 1.7em;
  outline: none;
  padding: 0.9rem 2rem;
  background-color: var(--light-bg);
  border: 0.4rem solid var(--light-bg);
  transition: 0.3s;
}
button {
  font-weight: 700;
  border-radius: 5rem;
  cursor: pointer;
  margin: 0 1.2rem;
}
#fire {
  margin-bottom: 2rem;
}
label {
  background-color: transparent;
  border: 0.4rem solid transparent;
  padding: 1rem 0.5rem 1rem 1rem;
  cursor: text;
}
input {
  font-weight: 600;
  width: 2.2rem;
  border-radius: 1rem;
  border: 0.4rem solid var(--shadow);
  margin: 1rem 0;
}
button:hover, button:focus, input:hover, input:focus {
  border: 0.4rem solid var(--shadow);
}
button:focus, input:focus {
  background-color: var(--shadow);
}

main {
  width: 140rem; height: 80rem;
  background-color: var(--light-bg);
  border: 0.5rem solid var(--shadow);
}
canvas, #field, #electro, #magnetic {
  width: inherit; height: inherit;
  top: 0; left: 50%;
  transform: translateX(-50%);
  position: absolute;
  z-index: 8;
  background-color: transparent;
  border: 0.5rem solid transparent;
}
#electro, #magnetic {
  opacity: 0;
  transition: opacity 0.5s;
}
.electro, .magnetic {
  width: 10rem; height: 5rem;
  background-repeat: repeat-x;
  background-size: 50%;
}
#electro {
  background-color: hsla(225, 40%, 50%, 0.5);
}
.electro {
  background-image: url(electro.svg);
}
#magnetic {
  background-color: hsla(0, 40%, 50%, 0.5);
}
.magnetic {
  background-image: url(magnetic.svg);
}
#projectile {
  width: 1rem; height: 1rem;
  top: 80rem; left: 0rem;
  position: relative;
  z-index: 10;
  background-color: var(--color);
  border-radius: 50%;
  transform: translate(-50%, -50%);
  transition: top 100ms linear, left 100ms linear;
  will-change: top, left;
}
#ufo {
  width: 9rem; height: 7rem;
  top: 70rem; left: 135rem;
  position: relative;
  z-index: 9;
  background-image: url(ufo.svg);
  background-size: 90%;
  background-position: center 60%;
  background-repeat: no-repeat;
  border-radius: 50%;
  transform: translate(-50%, -50%);
  transition: border 0.4s 0.1s, left 0.5s, top 0.5s;
}
#launcher {
  width: 3rem; height: 6rem;
  top: 73rem; left: 0;
  position: relative;
  z-index: 8;
  background-image: url(launcher.svg);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  transform-origin: center 40%;
  transition: top 0.1s, transform 0.5s;
}

.popup {
  position: absolute;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 15;
  border-radius: 1.5rem;
  background-color: var(--dark-bg);
  transform-origin: left;
  opacity: 0;
  display: none;
}
#controlsBlock {
  width: 80rem; height: 33.5rem;
  bottom: 1.5rem;
  transform: translate(-50%, 0);
  column-count: 3;
}
.columnContent {
  padding: 3rem;
}
.projectileConditions {
  height: 9rem;
}
.maxValues {
  height: 12rem;
}
.fieldConditions {
  height: 9rem;
}
.ufoConditions {
  height: 12rem;
}
.digit {
  font-size: 120%;
  font-weight: 800;
}

#startBlock, #winBlock, #failBlock, #finishBlock, #updateBlock {
  width: 50rem; height: 20rem;
  top: 50%;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
#startBlock {
  width: 80rem; height: 50rem;
}
.startText {
  text-align: center;
  padding: 1rem 5rem 2rem 5rem;
}
.coverBox {
  width: 45rem; height: 20rem;
  margin-bottom: 2rem;
  display: flex;
  justify-content: center;
  align-items: center;
}
#cover {
  width: inherit; height: inherit;
  position: absolute;
  background-image: url(cover.svg);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}
#light {
  width: 40rem; height: 15rem;
  margin-top: 3rem;
  position: absolute;
  background-image:
    -webkit-linear-gradient(10deg, #4060bf, transparent 55%),
    -webkit-linear-gradient(20deg, blue, transparent 65%),
    -webkit-linear-gradient(210deg, #E8651B, transparent 80%),
    -webkit-linear-gradient(155deg, #C82626, transparent 70%),
    -webkit-linear-gradient(90deg, blue, transparent 90%);
  border-radius: 5rem;
  filter: blur(4rem);
}

#description {
  width: 80rem; height: 12rem;
  top: 1.5rem;
  transform: translate(-50%, 0);
  align-items: center;
  justify-content: center;
}
.descriptionText {
  display: none;
  font-size: 2em;
  text-align: center;
  padding: 0 6rem;
}

span.space {
  margin: 0 0.3rem;
}
span.lang {
  font-size: 1.4em;
  font-weight: 600;
  cursor: pointer;
  padding: 0.2rem 0.5rem;
  background-color: var(--dark-bg);
  border: 0.1rem solid var(--shadow);
  transition: 0.3s;
}
span.lang:hover, span.lang:focus {
  background-color: var(--shadow);
}
span.this {
  font-weight: 800;
  background-color: var(--light-bg);
}

#rotate {
  display: none;
}
@media screen and (orientation: portrait) {
  html {
    font-size: 10px;
  }
  main, footer, #start {
    display: none;
  }
  #startBlock {
    width: 100vw; height: 100vh;
  }
  .coverBox, #cover {
    width: 100vw; height: 45vw;
  }
  #light {
    width: 100vw; height: 40vw;
  }
  .startText {
    padding: 1rem 2rem 2rem 2rem;
  }
  #rotate {
    display: block;
    width: 85vw; max-width: 45rem;
    padding: 2rem 0;
    text-align: center;
    border-radius: 2rem;
    background-color: var(--red);
  }
}

.showBlock {
  animation: showBlock 0.5s cubic-bezier(.18,.89,.32,1.28) 0.2s forwards;
}
@keyframes showBlock {
  0% {transform: scale(0.1) translate(-50%, 0);}
  100% {opacity: 1; transform: scale(1) translate(-50%, 0);}
}
.hideBlock {
  animation: hideBlock 0.5s cubic-bezier(1,1.47,0,.8) forwards;
}
@keyframes hideBlock {
  0% {opacity: 1; transform: scale(1) translate(-50%, 0);}
  100% {transform: scale(0.1) translate(-50%, 0);}
}

.show {
  animation: show 0.5s cubic-bezier(.18,.89,.32,1.28) 0.2s forwards;
}
@keyframes show {
  0% {transform: scale(0.1) translate(-50%, -50%);}
  100% {opacity: 1; transform: scale(1) translate(-50%, -50%);}
}
.hide {
  animation: hide 0.5s cubic-bezier(1,1.47,0,.8) forwards;
}
@keyframes hide {
  0% {opacity: 1; transform: scale(1) translate(-50%, -50%);}
  100% {transform: scale(0.1) translate(-50%, -50%);}
}

